# reachy2_core

./: .gitignore  README.md  dependencies.sh  pyproject.toml  requirements.txt
dynamic_state_router/dynamic_state_router/: dynamic_state_router.py
gazebo_mimic/: CMakeLists.txt  package.xml
gazebo_mimic/include/gazebo_mimic/: mimic_joint_plugin.h
gazebo_mimic/src/: mimic_joint_plugin.cpp
mobile_base_controller/zuuu_interfaces/: CMakeLists.txt
moveit_utils/: package.xml  setup.cfg  setup.py
moveit_utils/moveit_utils/: launch_utils.py
reachy_bringup/: CMakeLists.txt  README.md
reachy_bringup/config/: reachy_full_kit_controllers.yaml  reachy_full_kit_controllers_mujoco.yaml  ros2_controllers_ultimate_combo_top_moumoute.yaml
reachy_bringup/launch/: reachy.launch.py
reachy_bringup/scripts/: start_ethercat_server.sh
reachy_config/: package.xml  setup.py
reachy_config/custom_old_save/: antennas.yaml  grippers.yaml  left_arm.yaml  left_elbow_poulpe2d.yaml  left_gripper.yaml  left_shoulder_poulpe2d.yaml  left_wrist_poulpe3d.yaml  neck_beta.yaml  reachy.yaml  reachy.yaml~
reachy_config/default/: reachy.yaml  right_shoulder_poulpe2d.yaml  right_wrist_poulpe3d.yaml
reachy_config/reachy_config/: __init__.py  parsing.py  reachy_config.py  utils.py  validate.py
reachy_controllers/dynamixel_control/dynamixel_c_api/: Cargo.toml  build.rs  dynamixel_controller.h  package.xml
reachy_controllers/dynamixel_control/dynamixel_c_api/src/: controller.rs  lib.rs
reachy_controllers/dynamixel_control/dynamixel_controller/: Cargo.toml  build.rs  package.xml
reachy_controllers/dynamixel_control/dynamixel_controller/config/: single_xl330.yaml
reachy_controllers/dynamixel_control/dynamixel_controller/examples/: single_dxl.rs  two_dxl.rs
reachy_controllers/dynamixel_control/dynamixel_controller/src/: background_controller.rs  controller.rs  lib.rs  xl330.rs  xm.rs
reachy_controllers/neck_system_hwi/: CMakeLists.txt
reachy_controllers/orbita2d_serial_system_hwi/: CMakeLists.txt  orbita2d_serial_system_hwi.xml  package.xml
reachy_controllers/reachy_2023_controllers_rs/orbita2d_serial_hwi/: Cargo.toml  build.rs  orbita2d_serial_hwi.h  package.xml
reachy_controllers/smart_gripper_dynamixel_system_hwi/: CMakeLists.txt  package.xml  smart_gripper_dynamixel_system_hwi.xml
reachy_description/config/: reachy.rviz  reachy_simu.rviz
reachy_description/launch/: display.launch.py
reachy_description/meshes/: forearm_visual.dae  head_visual.dae  mobile_base_visual.dae  torso_collider.dae  torso_collider_no_cone.dae  torso_visual.dae  torso_visual_high.dae  upper_arm_collider.dae  upper_arm_visual.dae
reachy_description/ros2_control/: dynamixel_gripper.ros2_control.xacro  head.ros2_control.xacro  orbita.ros2_control.xacro  orbita2dof.ros2_control.xacro  smartgripper.ros2_control.xacro
reachy_description/urdf/: arm.urdf.xacro  dynamixel_gripper.urdf.xacro  gripper.urdf.xacro  gz_mimic.urdf.xacro  head.urdf.xacro  orbita.urdf.xacro  orbita2dof.urdf.xacro  specs.md  (+2 more)
reachy_fake/: setup.py
reachy_gazebo/: setup.py
reachy_moveit_config/: .setup_assistant  README.md  package.xml
reachy_sdk_server/: setup.py
reachy_utils/: setup.py
(+123 files in other folders)
