[package]
name = "dynamixel_c_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
env_logger = "0.11.3"
log = "0.4"

# Can we "inherit" the version from the workspace?
# motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch="24-add-get_board_state" }
motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch="develop" }
once_cell = "1.18.0"
dynamixel_controller = { version = "0.1.0", path = "../dynamixel_controller" }

[build-dependencies]
cbindgen = "0.24.5"


[lib]
name = "dynamixel_c_api"
crate-type = ["staticlib", "cdylib"]
