[package]
name = "dynamixel_controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cache_cache = "0.1.1"
libc = "0.2.146"
once_cell = "1.19.0"

rustypot = { git = "https://github.com/pollen-robotics/rustypot", branch = "62-xl330" }

serialport = "4.2.1"
serde = { version = "1.0.183", features = ["derive"] }
serde_yaml = "0.9.25"
log = "0.4.20"
# motor_toolbox_rs = "0.2.1"
motor_toolbox_rs = { git = "https://github.com/pollen-robotics/motor_toolbox_rs", branch = "32-add-temperature" }

[build-dependencies]
cbindgen = "0.24.3"

# [lib]
# crate-type = ["staticlib", "cdylib"]
