[package]
name = "orbita2d_serial_hwi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
libc = "0.2.146"
orbita2d_serial_controller = { path = "/home/pollen/dev/orbita2d_serial_controller" }

[build-dependencies]
cbindgen = "0.24.3"

[lib]
crate-type = ["staticlib"]
